--- a/index.html
+++ b/index.html
@@ -13,6 +13,27 @@
     </div>
     <div class="search-city">
         <h2>Current city</h2>
+        <div class="current-city">Atlanta (08/09/2023)</div>
+        <div class="temp">Temp:</div>
+        <div class="wind">Wind:</div>
+        <div class="humidity">Humidity:</div>
+    </div>
+    <div class="5-day-forcast">
+        <h2>5-Day Forcast</h2>
+        <div class="monday-forcast">
+            <div class="weather-img">
+            <img src="" alt="weather-icon">
+            </div>
+            <div class="m-temp">Temp:</div>
+        </div>
+
+
+
+
+
+
+
+    </div>
         <h2>Search for a city:</h2>
         <input class="search-city-input">
         <button class="city-option">Atlanta</button>
