add remainder divs with classes for style for each day

--- a/index.html
+++ b/index.html
@@ -25,7 +25,68 @@
             <img src="" alt="weather-icon">
             </div>
             <div class="m-temp">Temp:</div>
+            <div class="m-wind">Wind:</div>
+            <div class="m-humidity">Humidity:</div>
         </div>
+        <div class="tuesday-forcast">
+            <div class="weather-img">
+                <img src="" alt="weather-icon">
+            </div>
+            <div class="tues-temp">Temp:</div>
+            <div class="tues-temp">Temp:</div>
+            <div class="tues-wind">Wind:</div>
+            <div class="tues-humidity">Humidity:</div>
+        </div>
+        <div class="wed-forcast">
+            <div class="weather-img">
+                <img src="" alt="weather-icon">
+            </div>
+            <div class="wed-temp">Temp:</div>
+            <div class="wed-temp">Temp:</div>
+            <div class="wed-wind">Wind:</div>
+            <div class="wed-humidity">Humidity:</div>
+        </div>
+        <div class="thurs-forcast">
+            <div class="weather-img">
+                <img src="" alt="weather-icon">
+            </div>
+            <div class="thurs-temp">Temp:</div>
+            <div class="thurs-temp">Temp:</div>
+            <div class="thurs-wind">Wind:</div>
+            <div class="thurs-humidity">Humidity:</div>
+        </div>
+        <div class="fri-forcast">
+            <div class="weather-img">
+                <img src="" alt="weather-icon">
+            </div>
+            <div class="fri-temp">Temp:</div>
+            <div class="fri-temp">Temp:</div>
+            <div class="fri-wind">Wind:</div>
+            <div class="fri-humidity">Humidity:</div>
+        </div>
+        <div class="sat-forcast">
+            <div class="weather-img">
+                <img src="" alt="weather-icon">
+            </div>
+            <div class="sat-temp">Temp:</div>
+            <div class="sat-temp">Temp:</div>
+            <div class="sat-wind">Wind:</div>
+            <div class="sat-humidity">Humidity:</div>
+        </div>
+        <div class="sun-forcast">
+            <div class="weather-img">
+                <img src="" alt="weather-icon">
+            </div>
+            <div class="sun-temp">Temp:</div>
+            <div class="sun-temp">Temp:</div>
+            <div class="sun-wind">Wind:</div>
+            <div class="sun-humidity">Humidity:</div>
+        </div>
+
+
+
+
+
 
 
 
