--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="wind">Wind:</div>
             <div class="humidity">Humidity:</div>
         
-        <div class="five-day-forcast">
+        <div class="fiveday-forcast">
                 <h2>5-Day Forcast</h2>
             
 
@@ -53,6 +53,7 @@
                         <img src="" alt="weather-icon">
                     </div>
                     <div class="tues-temp">Temp:</div>
+                    <div class="tues-temp">Temp:</div>
                     <div class="tues-wind">Wind:</div>
                     <div class="tues-humidity">Humidity:</div>
                 </div>
@@ -60,6 +61,7 @@
                     <div class="weather-img">
                         <img src="" alt="weather-icon">
                     </div>
+                    <div class="wed-temp">Temp:</div>
                     <div class="wed-temp">Temp:</div>
                     <div class="wed-wind">Wind:</div>
                     <div class="wed-humidity">Humidity:</div>
@@ -69,6 +71,7 @@
                         <img src="" alt="weather-icon">
                     </div>
                     <div class="thurs-temp">Temp:</div>
+                    <div class="thurs-temp">Temp:</div>
                     <div class="thurs-wind">Wind:</div>
                     <div class="thurs-humidity">Humidity:</div>
                 </div>
@@ -76,6 +79,7 @@
                     <div class="weather-img">
                         <img src="" alt="weather-icon">
                     </div>
+                    <div class="fri-temp">Temp:</div>
                     <div class="fri-temp">Temp:</div>
                     <div class="fri-wind">Wind:</div>
                     <div class="fri-humidity">Humidity:</div>
@@ -85,6 +89,7 @@
                         <img src="" alt="weather-icon">
                     </div>
                     <div class="sat-temp">Temp:</div>
+                    <div class="sat-temp">Temp:</div>
                     <div class="sat-wind">Wind:</div>
                     <div class="sat-humidity">Humidity:</div>
                 </div>
@@ -92,6 +97,7 @@
                     <div class="weather-img">
                         <img src="" alt="weather-icon">
                     </div>
+                    <div class="sun-temp">Temp:</div>
                     <div class="sun-temp">Temp:</div>
                     <div class="sun-wind">Wind:</div>
                     <div class="sun-humidity">Humidity:</div>
