remove duplicate temperature titles

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <h1>Weather-Forcast</h1>
     </div>
     <div class="wrapper">
-        <div class="search-header">
+        <div class="search-container">
             <h2>Search for a city:</h2>
             <input type="text" id="city-input" placeholder="City name" class="search-city-input">
-            <button id="search-button">Search</button>
+            <button id="search-button" class="search-bttn">Search</button>
 
             <button class="city-option">Atlanta</button>
             <button class="city-option">Denver</button>
@@ -26,6 +26,7 @@
             <button class="city-option">New York</button>
             <button class="city-option">Chicago</button>
             <button class="city-option">Austin</button>
+            
         </div>
 
         <div class="current-city-display">
@@ -53,7 +54,6 @@
                         <img src="" alt="weather-icon">
                     </div>
                     <div class="tues-temp">Temp:</div>
-                    <div class="tues-temp">Temp:</div>
                     <div class="tues-wind">Wind:</div>
                     <div class="tues-humidity">Humidity:</div>
                 </div>
@@ -61,7 +61,6 @@
                     <div class="weather-img">
                         <img src="" alt="weather-icon">
                     </div>
-                    <div class="wed-temp">Temp:</div>
                     <div class="wed-temp">Temp:</div>
                     <div class="wed-wind">Wind:</div>
                     <div class="wed-humidity">Humidity:</div>
@@ -71,7 +70,6 @@
                         <img src="" alt="weather-icon">
                     </div>
                     <div class="thurs-temp">Temp:</div>
-                    <div class="thurs-temp">Temp:</div>
                     <div class="thurs-wind">Wind:</div>
                     <div class="thurs-humidity">Humidity:</div>
                 </div>
@@ -79,7 +77,6 @@
                     <div class="weather-img">
                         <img src="" alt="weather-icon">
                     </div>
-                    <div class="fri-temp">Temp:</div>
                     <div class="fri-temp">Temp:</div>
                     <div class="fri-wind">Wind:</div>
                     <div class="fri-humidity">Humidity:</div>
@@ -89,7 +86,6 @@
                         <img src="" alt="weather-icon">
                     </div>
                     <div class="sat-temp">Temp:</div>
-                    <div class="sat-temp">Temp:</div>
                     <div class="sat-wind">Wind:</div>
                     <div class="sat-humidity">Humidity:</div>
                 </div>
@@ -97,7 +93,6 @@
                     <div class="weather-img">
                         <img src="" alt="weather-icon">
                     </div>
-                    <div class="sun-temp">Temp:</div>
                     <div class="sun-temp">Temp:</div>
                     <div class="sun-wind">Wind:</div>
                     <div class="sun-humidity">Humidity:</div>
