--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-    <div class="Weather-heading">
+    
+    <div class="weather-heading">
         <h1>Weather-Forcast</h1>
     </div>
+    
     <div class="wrapper">
         <div class="search-container">
             <h2>Search for a city:</h2>
