--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="current-city-display">
                 <h2 id="current-city">Current city</h2>
                 <div id="current-date" class="current-date">(08/09/2023)</div>
-                <div id="current-date" class="temp">Temp:</div>
+                <div id="current-temp" class="temp">Temp:</div>
                 <div id="current-wind" class="wind">Wind:</div>
                 <div id="current-humidity" class="humidity">Humidity:</div>
         </div>
