add an event listener to the search button, once user input city and click search, weather data function will be executed

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
             
 
             <div class="weather-cards">
-                <div class="monday-forcast">
+                <div id="monday-forcast" class="monday-forcast">
                     <div class="weather-img">
-                        <img src="" alt="weather-icon">
+                        <img id="weather-img" src="" alt="weather-icon">
                     </div>
-                    <div class="m-temp">Temp:</div>
-                    <div class="m-wind">Wind:</div>
-                    <div class="m-humidity">Humidity:</div>
+                    <div id= m-temp class="m-temp">Temp:</div>
+                    <div id="m-wind" class="m-wind">Wind:</div>
+                    <div id="m-humidity" class="m-humidity">Humidity:</div>
                 </div>
                 <div class="tuesday-forcast">
                     <div class="weather-img">
