change inner html to corresponding weather data with concatination and array value

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             
         </div>
 
-        <div class="current-city-wrapper">
+        <div id="currentCityData" class="current-city-wrapper">
             <div class="current-city-display">
                 <h2 id="current-city">Current city</h2>
                 <div id="current-date" class="current-date">(08/09/2023)</div>
