--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <div id="currentCityData" class="current-city-wrapper">
             <div class="current-city-display">
                 <h2 id="current-city">Current city</h2>
-                <div id="current-date" class="current-date">(08/09/2023)</div>
-                <div id="current-temp" class="temp">Temp:</div>
+                <div id="current-date" class="current-date"></div>
+                <div id="current-temp" class="temp">Temperature:</div>
                 <div id="current-wind" class="wind">Wind:</div>
                 <div id="current-humidity" class="humidity">Humidity:</div>
         </div>
