add icons to image src in html

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <div class="weather-cards">
                 <div id="monday-forcast" class="monday-forcast">
                     <div id="m-date" class="m-date">08/12/2023</div>
-                    <div class="weather-img">
-                        <img id="weather-img" src="" alt="weather-icon">
+                    <div id="m-img" class="weather-img">
+                        <img id="m-weather-img" src="https://openweathermap.org/img/wn/02d@2x.png" alt="weather-icon">
                     </div>
                     <div id= m-temp class="m-temp">Temp:</div>
                     <div id="m-wind" class="m-wind">Wind:</div>
@@ -56,7 +56,7 @@
                 <div class="tuesday-forcast">
                     <div class="tues-date">08/13/2023</div>
                     <div class="weather-img">
-                        <img src="" alt="weather-icon">
+                        <img src="https://openweathermap.org/img/wn/10d@2x.png" alt="weather-icon">
                     </div>
                     <div id="tues-temp" class="tues-temp">Temp:</div>
                     <div id="tues-wind" class="tues-wind">Wind:</div>
@@ -65,7 +65,7 @@
                 <div class="wednesday-forcast">
                     <div class="wed-date">08/14/2023</div>
                     <div class="weather-img">
-                        <img src="" alt="weather-icon">
+                        <img src="https://openweathermap.org/img/wn/10d@2x.png" alt="weather-icon">
                     </div>
                     <div id="wed-temp" class="wed-temp">Temp:</div>
                     <div id="wed-wind" class="wed-wind">Wind:</div>
@@ -74,7 +74,7 @@
                 <div class="thursday-forcast">
                     <div class="thurs-date">08/15/2023</div>
                     <div class="weather-img">
-                        <img src="" alt="weather-icon">
+                        <img src="https://openweathermap.org/img/wn/04d@2x.png" alt="weather-icon">
                     </div>
                     <div id="thurs-temp" class="thurs-temp">Temp:</div>
                     <div id="thurs-wind" class="thurs-wind">Wind:</div>
@@ -83,7 +83,7 @@
                 <div class="friday-forcast">
                     <div id="fri-date" class="fri-date">8/16/2023</div>
                     <div class="weather-img">
-                        <img src="" alt="weather-icon">
+                        <img src="https://openweathermap.org/img/wn/10d@2x.png" alt="weather-icon">
                     </div>
                     <div id="fri-temp" class="fri-temp">Temp:</div>
                     <div id="fri-wind" class="fri-wind">Wind:</div>
