add a for loop for each input value, will be stored in search history array

--- a/index.html
+++ b/index.html
@@ -19,15 +19,11 @@
             <h2>Search for a city:</h2>
             <input type="text" id="city-input" placeholder="City name" class="search-city-input">
             <button id="search-button" class="search-bttn">Search</button>
-
-            <button id="city-button" class="city-option">Atlanta</button>
-            <button id="city-button" class="city-option">Denver</button>
-            <button id="city-button" class="city-option">Seattle</button>
-            <button id="city-button" class="city-option">San Fransico</button>
-            <button id="city-button" class="city-option">Orlando</button>
-            <button id="city-button" class="city-option">New York</button>
-            <button id="city-button" class="city-option">Chicago</button>
-            <button id="city-button" class="city-option">Austin</button>
+            <div id="history" class="search-history">Search History</div>
+            <div id="recent-search" class="recentItem"></div>
+            <div id="recent" class="recentList"></div>
+            <p></p>
+            <button id="clear-history" class="clear-history">Clear History</button>
             
         </div>
 
@@ -94,6 +90,7 @@
             </div>
         </div>
     </div>
+<script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
 <script src="./script.js"></script>
 </body>
 
