help from tutor to use a alternative route to for filtering out data from the long list of different time intervals, this made it easier to get the data I needed to create my weather cards, also the correct date is is filtered from time that was included in the arrays

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class="tuesday-forcast">
                     <div class="tues-date">08/13/2023</div>
-                    <div class="weather-img">
+                    <div id="weather-img" class="weather-img">
                         <img src="https://openweathermap.org/img/wn/10d@2x.png" alt="weather-icon">
                     </div>
                     <div id="tues-temp" class="tues-temp">Temp:</div>
