--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
         </div>
 
-        <div id="currentCityData" class="current-city-wrapper">
-            <div class="current-city-display">
+        <div id="current" class="current-city-wrapper">
+            <div id="current-cityD" class="current-city-display">
                 <h2 id="current-city">Current city</h2>
                 <div id="current-date" class="current-date">(08/09/2023)</div>
                 <div id="current-temp" class="temp">Temperature:</div>
@@ -37,7 +37,7 @@
             </div>
             <div class="fiveday-forcast">
                 <h2>5-Day Forcast</h2>
-                <div class="wrapper-cards">
+            <div class="wrapper-cards">
                 <div class="weather-cards">
                     <div class="date">Date:</div>
                     <div id="weather-img" class="weather-img">
@@ -47,6 +47,7 @@
                     <div id="wind" class="wind">Wind:</div>
                     <div id="humidity" class="humidity">Humidity:</div>
                 </div>
+
                 <div class="weather-cards">
                     <div class="date">Date:</div>
                     <div id="weather-img" class="weather-img">
@@ -56,6 +57,7 @@
                     <div id="wind" class="wind">Wind:</div>
                     <div id="humidity" class="humidity">Humidity:</div>
                 </div>
+                
                 <div class="weather-cards">
                     <div class="date">Date:</div>
                     <div class="weather-img">
