--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="current" class="current-city-wrapper">
             <div id="current-cityD" class="current-city-display">
                 <h2 id="current-city">Current city</h2>
-                <div id="current-date" class="current-date">(08/09/2023)</div>
+                <div id="current-date" class="current-date"></div>
                 <div id="current-temp" class="temp">Temperature:</div>
                 <div id="current-wind" class="wind">Wind:</div>
                 <div id="current-humidity" class="humidity">Humidity:</div>
