debug to find what was causing duplicated dailyweatherdata

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
 
                 <div class="weather-cards">
-                    <div class="date">Date:</div>
+                    <div id="date" class="date">Date:</div>
                     <div id="weather-img" class="weather-img">
                         <img id="weather-icon" src="https://openweathermap.org/img/wn/10d@2x.png" alt="weather-icon">
                     </div>
@@ -59,7 +59,7 @@
                 </div>
                 
                 <div class="weather-cards">
-                    <div class="date">Date:</div>
+                    <div id="date" class="date">Date:</div>
                     <div class="weather-img">
                         <img id="weather-icon" src="https://openweathermap.org/img/wn/10d@2x.png" alt="weather-icon">
                     </div>
@@ -68,7 +68,7 @@
                     <div id="humidity" class="humidity">Humidity:</div>
                 </div>
                 <div class="weather-cards">
-                    <div class="date">Date:</div>
+                    <div id="date" class="date">Date:</div>
                     <div class="weather-img">
                         <img id="weather-icon" src="https://openweathermap.org/img/wn/04d@2x.png" alt="weather-icon">
                     </div>
