--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <div class="weather-heading">
         <h1>Weather-Forcast</h1>
+        <div id="clock" onload="currentTime()"></div>
     </div>
 
     <div class="wrapper">
